--- a/.github/workflows/azure-functions-app-dotnet.yml
+++ b/.github/workflows/azure-functions-app-dotnet.yml
@@ -24,7 +24,7 @@ on:
 
 env:
   AZURE_FUNCTIONAPP_NAME: 'selu383-sp25-p03-g04'   # set this to your function app name on Azure
-  AZURE_FUNCTIONAPP_PACKAGE_PATH: 'selu383-sp25-p03-g04.PublishSettings'       # set this to the path to your function app project, defaults to the repository root
+  AZURE_FUNCTIONAPP_PACKAGE_PATH: '.'       # set this to the path to your function app project, defaults to the repository root
   DOTNET_VERSION: '9.0.x'                   # set this to the dotnet version to use (e.g. '2.1.x', '3.1.x', '5.0.x')
 
 jobs:
