--- a/.github/workflows/azure-functions-app-dotnet.yml
+++ b/.github/workflows/azure-functions-app-dotnet.yml
@@ -1,4 +1,4 @@
-name: Build and Deploy to Azure Web App
+name: Build and Deploy API to Azure Web App
 
 on:
   push:
@@ -21,10 +21,10 @@ jobs:
       with:
         dotnet-version: ${{ env.DOTNET_VERSION }}
 
-    - name: 'Resolve Project Dependencies Using Dotnet'
+    - name: 'Build and publish API project'
       run: |
-        dotnet restore
-        dotnet build --configuration Release
+        dotnet restore Selu383.SP25.P03.Api/Selu383.SP25.P03.Api.csproj
+        dotnet build Selu383.SP25.P03.Api/Selu383.SP25.P03.Api.csproj --configuration Release
         dotnet publish Selu383.SP25.P03.Api/Selu383.SP25.P03.Api.csproj -c Release -o ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
         
     - name: 'Login via Azure CLI'
