--- a/.github/workflows/azure-functions-app-dotnet.yml
+++ b/.github/workflows/azure-functions-app-dotnet.yml
@@ -1,4 +1,4 @@
-name: Build and Deploy API to Azure Web App
+name: Build and Deploy to Azure Web App
 
 on:
   push:
@@ -27,14 +27,9 @@ jobs:
         dotnet build Selu383.SP25.P03.Api/Selu383.SP25.P03.Api.csproj --configuration Release
         dotnet publish Selu383.SP25.P03.Api/Selu383.SP25.P03.Api.csproj -c Release -o ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
         
-    - name: 'Login via Azure CLI'
-      uses: azure/login@v1
-      with:
-        creds: ${{ secrets.AZURE_CREDENTIALS }}
-        
     - name: 'Deploy to Azure Web App'
       uses: azure/webapps-deploy@v2
       with:
-
         app-name: ${{ env.AZURE_WEBAPP_NAME }}
         package: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
+        publish-profile: ${{ secrets.AZURE_FUNCTIONAPP_PUBLISH_PROFILE }}
