--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 EXPO_PACKAGER_PROXY_URL=https://valid-peacock-literally.ngrok-free.app
 AZURE_WEBAPP_PUBLISH_PROFILE=selu383-sp25-p03-g04.PublishSettings
+AZURE_FUNCTIONS_PUBLISH_PROFILE=selu383-sp25-p03-g04.PublishSettings
