--- a/Selu383.SP25.P03.Web/.gitignore
+++ b/Selu383.SP25.P03.Web/.gitignore
@@ -1,7 +1,7 @@
 # Logs
 logs
-*.log
-npm-debug.log*
+.log
+npm-debug.log
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
@@ -10,16 +10,15 @@ lerna-debug.log*
 
 dist
 dist-ssr
-*.local
+.local
 
 # Editor directories and files
-.vscode/*
+.vscode/
 !.vscode/extensions.json
 .idea
 .DS_Store
 *.suo
-*.ntvs*
+.ntvs
 *.njsproj
 *.sln
 *.sw?
-.env
