--- a/Selu383.SP25.P03.Mobile/package.json
+++ b/Selu383.SP25.P03.Mobile/package.json
@@ -26,8 +26,8 @@
     "expo-haptics": "~14.0.1",
     "expo-linear-gradient": "^14.0.2",
     "expo-linking": "~7.0.5",
-    "expo-router": "~4.0.17",
-    "expo-splash-screen": "~0.29.21",
+    "expo-router": "^4.0.20",
+    "expo-splash-screen": "^0.29.22",
     "expo-status-bar": "~2.0.1",
     "expo-symbols": "~0.2.2",
     "expo-system-ui": "~4.0.8",
