--- a/Selu383.SP25.P03.Mobile/package.json
+++ b/Selu383.SP25.P03.Mobile/package.json
@@ -22,6 +22,7 @@
     "expo": "~52.0.33",
     "expo-blur": "~14.0.3",
     "expo-constants": "~17.0.5",
+    "expo-crypto": "^14.0.2",
     "expo-font": "~13.0.3",
     "expo-haptics": "~14.0.1",
     "expo-linear-gradient": "^14.0.2",
