Modified booking flow

--- a/Selu383.SP25.P03.Api/appsettings.json
+++ b/Selu383.SP25.P03.Api/appsettings.json
@@ -1,12 +1,12 @@
 {
-    "Logging": {
-        "LogLevel": {
-            "Default": "Information",
-            "Microsoft.AspNetCore": "Warning"
-        }
-    },
-    "AllowedHosts": "*",
-    "ConnectionStrings": {
-        "DataContext": "Server=(localdb)\\mssqllocaldb;Database=SP25-P03-G04;Trusted_Connection=True;"
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DataContext": "Server=localhost,1433;Database=SP25-P03-G04;User Id=sa;Password=Password123!;TrustServerCertificate=True;"
+  }
 }
