--- a/Selu383.SP25.P03.Api/appsettings.json
+++ b/Selu383.SP25.P03.Api/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DataContext": "Server=localhost,1433;Database=SP25-P03-G04;User Id=sa;Password=Password123!;TrustServerCertificate=True;"
+    "DataContext": "Server=(localdb)\\mssqllocaldb;Database=SP25-P03-G04;Trusted_Connection=True;"
   }
 }
